--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ In addition to my technical prowess, I pride myself on my ability to communicate
         </p>
         <br>
         <!-- add this button if click route to whatsapp no.8837067635 -->
-        <a href="https://wa.me/8837067635" class="whatsapp-btn" target="_blank">WhatsApp</a>
+        <a href="https://wa.me/+918837067635" class="whatsapp-btn" target="_blank">WhatsApp</a>
         <!-- add this button if click route to instagram shakespearechabungbam -->
         <a href="https://www.instagram.com/shakespearechabungbam" class="instagram-btn" target="_blank">Instagram</a>
         <br>
